# cspan-booknotes

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  HELLO_WORLD_CHANGES.md  HF_README.md  LICENSE.md  MIGRATION.md  RAILWAY_DEPLOY.md  RAILWAY_QUICK_FIX.md  RAILWAY_SETUP.md  README.md  SCHEMA.md  SETUP.md  hf_repo.yaml  main.py  mockup-v4.html  pyproject.toml
.github/workflows/: test.yml
app/: QUICKSTART.md  README.md  package.json
app/server/: .env.example  Dockerfile  package.json  railway.toml  tsconfig.json
app/server/prompts/: system.md  user.md
app/server/src/: db.ts  index.ts  llm.ts  prompts.test.ts  prompts.ts
app/server/src/services/: db.ts  llm.ts
app/shared/: package.json  types.ts
app/web/: .dockerignore  Dockerfile  nixpacks.toml  package.json  railway.toml
app/web/src/routes/: +page.server.ts  +page.svelte
app/web/src/routes/api/chat/: +server.ts
app/web/src/routes/api/episode/[id]/: +server.ts
dataset/: README.md  hf_repo.yaml  pyproject.toml
dataset/scripts/: USE.md  upload_to_hf.py
dataset/src/cspan_booknotes/: __init__.py  get.py
dataset/src/cspan_booknotes/models/: program.py
dataset/src/cspan_booknotes/parser/: duration.py  isbn.py
scripts/: author_index.py  bulk_upload.py  parse_programs.py  process_parsed.py  upload_to_hf.py
src/cspan_booknotes/: constants.py  exceptions.py
src/cspan_booknotes/models/: __init__.py  base.py  fields.py  validators.py
src/cspan_booknotes/parser/: __init__.py  air_date.py  description.py  guest.py  program_id.py  related.py  title.py  transcript.py
