[project]
name = "cspan-booknotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "polars>=1.33.1",
    "pydantic>=2.11.9",
    "ray>=2.49.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
